[gd_scene load_steps=10 format=3 uid="uid://c50i37hw6jvgy"]

[ext_resource type="Script" path="res://scenes/traps/base_trap.gd" id="1_2y7l8"]
[ext_resource type="Texture2D" uid="uid://2jjxmgtxyrjb" path="res://Assets/traps/woodTrap/SmallWoodTrap.png" id="2_bnavc"]
[ext_resource type="Texture2D" uid="uid://cwbk60vbinjn3" path="res://Assets/sprites/bear_trap/trap_1.png" id="2_hcrwt"]
[ext_resource type="Texture2D" uid="uid://ddaw26ktf3p7x" path="res://Assets/sprites/bear_trap/trap_2.png" id="3_13gml"]
[ext_resource type="AudioStream" uid="uid://cxs1s05soeys7" path="res://Assets/SFX/hits/Hits/Hit.wav" id="3_sh70r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ldx32"]
atlas = ExtResource("2_bnavc")
region = Rect2(72, 0, 72, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6e6d"]
atlas = ExtResource("2_bnavc")
region = Rect2(144, 0, 72, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyu2a"]
atlas = ExtResource("2_bnavc")
region = Rect2(216, 0, 72, 133)

[sub_resource type="SpriteFrames" id="SpriteFrames_om3gw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hcrwt")
}, {
"duration": 1.0,
"texture": ExtResource("3_13gml")
}],
"loop": true,
"name": &"bearTrap",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldx32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6e6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyu2a")
}],
"loop": false,
"name": &"woodTrap",
"speed": 5.0
}]

[node name="BaseTrap" type="Area2D"]
collision_mask = 257
script = ExtResource("1_2y7l8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_om3gw")
animation = &"bearTrap"

[node name="TrapTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -32.0
offset_top = 72.0
offset_right = 32.0
offset_bottom = 80.0
value = 50.0
show_percentage = false

[node name="asHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_sh70r")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TrapTimer" to="." method="_on_trap_timer_timeout"]
